--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,12 @@ html, body {
     overflow-x: hidden;
 }
 header{
-    height: 80px; 
+    height: 80px;
+    width: 100%;
     background-color: #073d4f;
     padding-left: 150px;
     padding-right: 95px;
+    position: fixed;
 }
 .menu-container{
     height: 100%;
@@ -41,4 +43,8 @@ a{
 }
 a:hover{
     background-color: rgba(200, 200, 200, 0.1);
+}
+
+.relleno {
+    height: 150vh;
 }
