--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ header{
     padding-left: 150px;
     padding-right: 95px;
     position: fixed;
+    z-index: 10000;
 }
 .menu-container{
     height: 100%;
@@ -23,9 +24,9 @@ header{
     display: flex;
     align-items: center;
 }
-.menu-container > img {
+.menu-container > a > img {
     height: 50px;
-    margin-right: 15px;
+   
 
 }
 a{
@@ -45,6 +46,8 @@ a:hover{
     background-color: rgba(200, 200, 200, 0.1);
 }
 
-.relleno {
-    height: 150vh;
+.main-container{
+    background-color: red;
+    height: 200%;
+    margin-top: 80px;
 }
