--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+
 }
 html, body {
     width: 100%;
@@ -56,7 +57,15 @@ a:hover{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    padding-left: 10%;
+    padding-right: 10%;
 }
-.main-container, h1{
+.first-section{
+    height: 100px;
+    width: 100%;
+    background-color: red;
+    margin-top: 10%;
     
+    
+
 }
