--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     position: relative;
     box-sizing: border-box;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
 
 }
 html, body {
@@ -27,7 +27,6 @@ header{
 }
 .menu-container > a > img {
     height: 50px;
-   
 }
 a{
     color: white;
@@ -45,24 +44,8 @@ a{
 a:hover{
     background-color: rgba(200, 200, 200, 0.1);
 }
-.filter{
-    width: 100%;
-    height: 100%;
-    background-color: rgba(100, 100, 100, .5);
-    z-index: 1;
-    padding-left: 10%;
-    padding-right: 10%;
-    position: absolute;
-    backdrop-filter: blur(2px);
-}
-.main-container > *{
-    z-index: 9500;
-}
-
-
-
 .main-container{
-    background: url(background.jpg);
+    background: url("https://images.ctfassets.net/wn7ipiv9ue5v/3GMulYxrXPEnKbNQTc2LUd/732d6878d82ac1128793eb462a7a9976/background.png?q=50&w=1920&fm=avif");
     height: 200%;
     margin-top: 80px;
     left: 0;
@@ -71,25 +54,36 @@ a:hover{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    
     position: absolute;
+    padding-left: 6.5%;
+    padding-right: 6.5%;
 }
+
 .first-section{
-    height: 500px;
+    height: 630px;
     width: 100%;
-    background-color: red;
     margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
-.second-section{
-    height: 100px;
-    background-color: green;
-    top: 15px;
-    margin-left: 20px;
-    margin-right: 110px;
-    
+.header-section{
+    height: 15%;
+    width: 100%;
+    color: white; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
-.third-section{
-    height: 100px;
+.header-section > h2{
+    font-size: 30px;
+}
+.header-section > p{
+    font-size: 14px;
+}
+.body-section{
+    height: 75%;
     background-color: blue;
+    width: 100%;
     
 }
