--- a/styles/home.css
+++ b/styles/home.css
@@ -1,49 +1,3 @@
-* {
-    position: relative;
-    box-sizing: border-box;
-    margin: 0;
-    font-family: Arial;
-
-}
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-}
-header{
-    height: 80px;
-    width: 100%;
-    background-color: #073d4f;
-    padding-left: 85px;
-    padding-right: 95px;
-    position: fixed;
-    z-index: 10000;
-}
-.menu-container{
-    height: 100%;
-    width: 50%;
-    display: flex;
-    align-items: center;
-}
-.menu-container > a > img {
-    height: 50px;
-}
-a{
-    color: white;
-    text-decoration: none;
-    height: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-    display: flex;
-    align-items: center;
-    font-size: 17px;
-    text-transform: uppercase;
-    font-weight: 600;
-    transition: all 0.2s;
-}
-a:hover{
-    background-color: rgba(200, 200, 200, 0.1);
-}
 .main-container{
     background: url("https://images.ctfassets.net/wn7ipiv9ue5v/3GMulYxrXPEnKbNQTc2LUd/732d6878d82ac1128793eb462a7a9976/background.png?q=50&w=1920&fm=avif");
     height: 200%;
@@ -58,7 +12,6 @@ a:hover{
     padding-left: 6.5%;
     padding-right: 6.5%;
 }
-
 .first-section{
     height: 630px;
     width: 100%;
@@ -68,7 +21,7 @@ a:hover{
     padding-left: 20px;
     justify-content: space-evenly;
 }
-.header-section{
+.section-header {
     height: 15%;
     width: 100%;
     color: white; 
@@ -76,26 +29,22 @@ a:hover{
     flex-direction: column;
     justify-content: space-evenly;
 }
-.header-section > h2{
+.section-header > h2{
     font-size: 30px;
 }
-.header-section > p{
+.section-header > p{
     font-size: 14px;
 }
-.body-section{
+.section-body{
     height: 75%;
     width: 100%;
-    
 }
 .card{
-    background-color: red;
     height: 460px;
     width: 392px;
     border-radius: 10px;
-    
 }
 .card-image{
-    background-color: green;
     height: 217px;
     width: 392px;
     border-top-right-radius: 10px;
@@ -103,12 +52,8 @@ a:hover{
     background: url(https://images.ctfassets.net/wn7ipiv9ue5v/712rV4d9AMeFrAXKRtwJDe/cd87f9bb018e138fa1bfb07ca5b9bd8a/960x540_vip_egg.png);
     background-size: cover;
 }
-
-
-
 .tag{
     background-color: #cb2b39;
-    height: 28px;
     width: 140px;
     border-radius: 10px;
     margin-left: -10px;
@@ -116,13 +61,11 @@ a:hover{
     color: white;
     font-size: 13px;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    padding-left: 11px;
+    padding: 5px 11px;
     font-family: Arial;
-    
 }
-.card-description{
+.card-description {
     background-color: #f9d5ac;
     height: calc(100% - 217px);
     width: 392px;
@@ -143,15 +86,11 @@ a:hover{
 .card-tittle{
     font-size: 14.5px;
     color: #3d0202;
-    display: flex;
-    justify-content:flex-start;
 }
 .card-stock{
     font-size: 11px;
     color: #dd261b;
     padding-top: 20px;
-    display: flex;
-    justify-content: flex-start;
 }
 .stock{
     background-color: yellow;
