--- a/styles/home.css
+++ b/styles/home.css
@@ -78,7 +78,6 @@
     flex-direction: column;
 }
 .card-text{
-    background-color:#f9d5ac;
     width: 100%;
     height: 70px;
     font-family: Arial, Helvetica, sans-serif;
@@ -123,9 +122,11 @@
     -webkit-text-stroke: 1px #015fbdb5;
     cursor: pointer;
 }
-.second-section > .section-header{
-    margin-left: 16px;
-    display: flex;
+.second-section{
+    background-color: blue;
+    margin-left: 20px;
+    height: 800px;
+    width: 100%;
 }
 .second-section > .section-header > h2{
     margin-bottom: 15px;
@@ -137,13 +138,27 @@
     display: flex;
     flex-direction: row;
     padding-top: 25px;
-    justify-content: space-around;
-    margin-left: -10px;
+    justify-content: space-between;
 }
 .second-section > .section-body> .card > .card-image{
     background: url(https://images.ctfassets.net/wn7ipiv9ue5v/7wao0Rt6TMeeaIXPDGLzGc/1ebe9cb340e1829f8ea249137fc5da0d/960x540_Divine_pass.png?q=75&w=420&fm=avif);
     
 }
+.second-section > .section-body > .card-description{
+    font-size: 11px;
+    color: #dd261b;
+    padding-top: 20px;
+}
+.card-text > span{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 50%;
+    font-size: 11px;
+    color: #dd261b;
+    padding-top: 13px;
+}
+   
 .second-section > .section-body > .second-card > .card-image{
     background: url(https://images.ctfassets.net/wn7ipiv9ue5v/6OhkSN9WOFhLHdW6vUBVJB/58e427c2ddcf5054c85818526ed640c8/960x540_Elite_pass.png?q=75&w=420&fm=avif);
 }
