--- a/styles/home.css
+++ b/styles/home.css
@@ -32,6 +32,7 @@ Header
     height: 15%;
     width: 100%;
     color: white; 
+    padding-bottom: 25px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -39,10 +40,12 @@ Header
 
 .section-header > h2{
     font-size: 30px;
+    padding-bottom: 15px;
 }
 
 .section-header > p{
     font-size: 14px;
+    line-height: 25px;
 }
 
 
@@ -124,7 +127,9 @@ Card
 
 
 .stock {
-    padding: 5px 10px;
+    padding: 5px;
+    padding-right: 15px;
+    margin-top: 10px;
     background-color: #eabe8a;
     border-radius: 9px;
     border:1px solid #dbad78;
@@ -140,13 +145,20 @@ Card
 .item {
     width: 100%;
     height: 50px;
-    background-color: blue;
     border-bottom: 1px solid #dbad78;
 
     display: flex;
     align-items:center;
 }
-
+.item-content{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.item-content > img{
+    padding-right: 6px;
+}
 .card-button{
     margin-top: 10px;
     height: 50px;
