--- a/styles/home.css
+++ b/styles/home.css
@@ -82,7 +82,7 @@ Card
 
 .card-image {
     height: 217px;
-    width: 392px;
+    width: 100%;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     background-size: cover;
@@ -218,4 +218,19 @@ Decorations
     align-items: center;
     padding: 5px 11px;
     font-family: Arial;
+}
+
+@media(max-width: 480px){
+    .main-container{
+        padding: 15px;
+    }
+    .section{
+        padding: 0px;
+    }
+    .card{
+        width: 100%;
+    }
+    .card-image{
+        background-position: center !important;
+    }
 }
